[package]
name = "lpb_sl-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.31.1"
libm = "0.2.5"
error-stack = "0.2.2"
serde = {version ="1.0.145",features = ["derive"]}
serde_json = "1.0.86"
log = "0.4.17"
env_logger = "0.9.0"