[package]
name = "lpb_sl-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.31.1"
libm = "0.2.5"
error-stack = "0.2.2"
serde = {version ="1.0.145",features = ["derive"]}
serde_json = "1.0.86"
log = "0.4.17"
env_logger = "0.9.0"
anyhow = "1.0"
futures = "0.3"
sqlx = { version = "0.5", features = ["sqlite", "runtime-tokio-native-tls"] }
tokio = { version = "1.20.0", features = ["macros"]}
clap = {version = "4.0.15",features = [ "derive" ]}
ringbuffer = "0.9.0"
structopt = "0.3"
gpio-cdev = {version = "0.5.1", features = ["async-tokio"]}
i2cdev = "0.5.0"
lcd = "0.4.1"
lcd-pcf8574 = "0.2.0"