[package]
name  = "lpb_unsafe_lib"
version = "0.0.1"
authors = ["You"]

[lib]
name = "lpb_unsafe_lib"
path = "topic.rs"

[features]
default = ["std"]
std = ["int-enum-impl/std"]
convert = ["int-enum-impl/convert"]

[dependencies]
iceoryx-rs = "0.1"
clap = {version = "4.0.26",features = ["derive"]}
int-enum = "0.5.0"
int-enum-impl = "0.5"
